# numbers3_clean

./: .env.example  .gitignore  README.md  app.py  auto_refresh_and_push.ps1  daily_numbers3.bat  local_refresh_joint.py  predict_latest.bat  pyproject.toml  requirements.txt  retrain_weekly.bat  run_evening.ps1  run_noon.ps1  run_refresh_joint.bat
.streamlit/: config.toml  secrets.toml
artifacts/: feature_candidates.from_csv.json  feature_names.json
artifacts/outputs/: ev_backfill.csv  ev_report.csv  next_prediction.csv  pred_latest.csv  prediction_history.csv  prediction_history.tmp.csv
artifacts/outputs.bak_20251103_121031/: ev_report.csv  next_prediction.csv  prediction_history.bak.csv
artifacts/shap/D_v2/: perm_importance_一の位.csv  perm_importance_十の位.csv  perm_importance_百の位.csv
artifacts/shap/D_v3/: perm_importance_一の位.csv  perm_importance_十の位.csv  perm_importance_百の位.csv
data/: scrape_all.py  scrape_update.py
data/raw/: 20201201-20251114_Numbers3features.csv
scripts/: build_ev.py  refresh_ev.ps1
src/: __init__.py
src/n3/analysis/: backtest_candidates_v4.py  compare_from_histories.py  compare_histories.py  compare_many_days.py  compare_models.py  compare_one_day.py  make_ev_report.py  merge_answers.py  short_term_eval.py
src/n3/backfill/: append_history.py  backfill_from_ev.py  backfill_history.py  backfill_history_joint.py  backfill_last_month.py  backfill_regime.py  backfill_v4.py  backfill_v4_direct.py  (+1 more)
src/numbers3_n3.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tools/: check_numeric_cols.py  leak_check_quick.py  repair_features.py
(+30 files in other folders)
